# TESP-2023-SRL

./: .gitignore  README.md  bag2png.py  index.html  script.js  style.css
autonomous/: automation.py  check.py  obstacle_avoidance.py  targetApproach.py  velocities.py
ev3_code/: socketrunner.py
utility/: bag2png.py  run_server.bash  scripts.txt
ws/src/autonomous/: automation.py  obstacle_avoidance.py  targetApproach.py  velocities.py
ws/src/tesp_server/: CMakeLists.txt  package.xml
ws/src/tesp_server/src/: server.py
